Fixed a couple of bugs with annotations
